--- a/apps/trustvox_web/lib/trustvox_web/templates/complains/new.html.eex
+++ b/apps/trustvox_web/lib/trustvox_web/templates/complains/new.html.eex
@@ -2,7 +2,7 @@
   <h1><%= gettext "Post new complain" %></h1>
 </section>
 
-<%= form_for @changeset, Routes.complains_path(@conn, :new), fn f -> %>
+<%= form_for @changeset, Routes.complains_path(@conn, :create), fn f -> %>
   <div class="form-group">
     <%= label f, :title, class: "control-label" %>
     <%= text_input f, :title, class: "form-control" %>
