Fix broken tests and remove warnings
Signed-off-by: Tallys Martins <tallysmartins@gmail.com>

--- a/apps/trustvox_web/lib/trustvox_web/templates/companies/search_form.html.eex
+++ b/apps/trustvox_web/lib/trustvox_web/templates/companies/search_form.html.eex
@@ -5,7 +5,7 @@
 <section class="row">
   <article class="column">
 
-    <%= form_for :search, Routes.companies_path(@conn, :search), fn f -> %>
+    <%= form_for :search, Routes.companies_path(@conn, :search), fn _f -> %>
       <div class="form-group row">
         <div class="column center">
           <%= text_input :search, :query, class: "form-control" %>
