Minor ajustments in html pages
Signed-off-by: Tallys Martins <tallysmartins@gmail.com>

--- a/apps/trustvox_web/lib/trustvox_web/templates/companies/list.html.eex
+++ b/apps/trustvox_web/lib/trustvox_web/templates/companies/list.html.eex
@@ -6,7 +6,8 @@
   <article class="column">
     <%= for company <- @companies do %>
       <div class="company" style="">
-        <h3><%= company.name %></h3>
+        <p>NAME: <%= link company.name, to: back_to_new(company) %></p>
+        <p style="border-bottom: 1px solid;">WEBSITE: <%= company.website %></p>
       </div>
     <% end %>
   </article>
