--- a/apps/trustvox_web/lib/trustvox_web/templates/companies/search_form.html.eex
+++ b/apps/trustvox_web/lib/trustvox_web/templates/companies/search_form.html.eex
@@ -1,5 +1,5 @@
 <section class="phx-hero">
-  <h1><%= gettext "Search for companies" %></h1>
+  <h1><%= gettext "Search target company" %></h1>
 </section>
 
 <section class="row">
