Remove warnings and exclude WIP tests from ci
Signed-off-by: Tallys Martins <tallysmartins@gmail.com>

--- a/apps/trustvox_web/lib/trustvox_web/templates/companies/new.html.eex
+++ b/apps/trustvox_web/lib/trustvox_web/templates/companies/new.html.eex
@@ -16,8 +16,8 @@
   </div>
 
   <div class="form-group">
-    city: <input type="text" name="subsidiaries[city][]">
-    state: <input type="text" name="subsidiaries[state][]">
+    City: <input type="text" name="subsidiaries[city][]">
+    State: <input type="text" name="subsidiaries[state][]">
   </div>
 
   <div class="form-group">
