--- a/lib/trustvox_web/templates/layout/app.html.eex
+++ b/lib/trustvox_web/templates/layout/app.html.eex
@@ -11,14 +11,9 @@
   <body>
     <header>
       <section class="container">
-        <nav role="navigation">
-          <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
-          </ul>
-        </nav>
-        <a href="https://phoenixframework.org/" class="phx-logo">
-          <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
-        </a>
+        <%= link "Github", to: "http://github.com/tallysmartins/trustvox-web" %>
+        <%= link "Home", to: "/" %>
+        <%= link "Trustvox Official", to: "https://site.trustvox.com.br" %>
       </section>
     </header>
     <main role="main" class="container">
