--- a/lib/trustvox_web/templates/page/index.html.eex
+++ b/lib/trustvox_web/templates/page/index.html.eex
@@ -1,35 +1,41 @@
 <section class="phx-hero">
-  <h1><%= gettext "Welcome to %{name}!", name: "Phoenix" %></h1>
-  <p>A productive web framework that<br/>does not compromise speed or maintainability.</p>
+  <h1><%= gettext "Welcome to %{name}!", name: "TrustVox" %></h1>
+  <p>Trusted and verified customer's feedback! </p>
+  <br>
+  <%= button("Complain", to: Routes.complains_path(@conn, :new), method: :get) %>
 </section>
 
 <section class="row">
   <article class="column">
-    <h2>Resources</h2>
+    <h2>Last Complains</h2>
     <ul>
       <li>
-        <a href="https://hexdocs.pm/phoenix/overview.html">Guides &amp; Docs</a>
+        Title 1
+        .....
       </li>
       <li>
-        <a href="https://github.com/phoenixframework/phoenix">Source</a>
+        Title 2
+        .....
       </li>
       <li>
-        <a href="https://github.com/phoenixframework/phoenix/blob/v1.4/CHANGELOG.md">v1.4 Changelog</a>
+        Title 3
       </li>
     </ul>
+    <%= link("Read all complains...", to: Routes.complains_path(@conn, :index)) %>
   </article>
   <article class="column">
-    <h2>Help</h2>
+    <h2>Top complained companies</h2>
     <ul>
       <li>
-        <a href="https://elixirforum.com/c/phoenix-forum">Forum</a>
+        Company 1 - City
       </li>
       <li>
-        <a href="https://webchat.freenode.net/?channels=elixir-lang">#elixir-lang on Freenode IRC</a>
+        Company 2 - City
       </li>
       <li>
-        <a href="https://twitter.com/elixirphoenix">Twitter @elixirphoenix</a>
+        Company 3 - City
       </li>
     </ul>
+    <%= link("Check companies stats!", to: Routes.complains_path(@conn, :stats))  %>
   </article>
 </section>
