Be able to select company subsidiary in complain form
Signed-off-by: Tallys Martins <tallysmartins@gmail.com>

--- a/lib/trustvox_web/templates/complains/new.html.eex
+++ b/lib/trustvox_web/templates/complains/new.html.eex
@@ -1,8 +1,8 @@
 <section class="phx-hero">
   <h1><%= gettext "Post new complain :)" %></h1>
   <div class="form-group company">
-    <p>NAME: <%= @company.name %></p>
-    <p style="border-bottom: 1px solid;">WEBSITE: <%= @company.website %></p>
+    <p><h2 style="border-top: 1px solid;"> <%= @company.name %></h2></p>
+    <p style="border-bottom: 1px solid;"> <%= link "website", to: @company.website %></p>
   </div>
 </section>
 
@@ -19,6 +19,12 @@
     <%= label f, :description, class: "control-label" %>
     <%= textarea f, :description, class: "form-control", rows: 5 %>
     <%= error_tag f, :description %>
+  </div>
+
+  <div class="form-group">
+    <%= label f, :subsidiary_id, "Company Location", class: "control-label" %>
+    <%= select(f, :subsidiary_id, subsidiaries_to_string(@company.subsidiaries)) %>
+    <%= error_tag f, :subsidiary_id %>
   </div>
 
   <div class="form-group">
