--- a/lib/trustvox_web/templates/companies/new.html.eex
+++ b/lib/trustvox_web/templates/companies/new.html.eex
@@ -11,14 +11,25 @@
 
   <div class="form-group">
     <%= label f, :website, class: "control-label" %>
-    <%= textarea f, :website, class: "form-control", rows: 5 %>
+    <%= text_input f, :website, class: "form-control", rows: 5 %>
     <%= error_tag f, :website %>
   </div>
 
-  <div class="form-group">
-    City: <input type="text" name="subsidiaries[city][]">
-    State: <input type="text" name="subsidiaries[state][]">
-  </div>
+  <%= inputs_for f, :subsidiaries, fn fp -> %>
+    <div class="row">
+      <div class="sm">
+        <%= label fp, :state, class: "control-label" %>
+        <%= select fp, :state, valid_states() %>
+        <%= error_tag fp, :state %>
+      </div>
+
+      <div class="form-group column">
+        <%= label fp, :city, class: "control-label" %>
+        <%= text_input fp, :city, class: "form-control" %>
+        <%= error_tag fp, :city %>
+      </div>
+    </div>
+  <% end %>
 
   <div class="form-group">
     <%= submit "Submit", class: "btn btn-primary" %>
