Minor ajustments in some html pages and add seeds.exs
Signed-off-by: Tallys Martins <tallysmartins@gmail.com>

--- a/lib/trustvox_web/templates/companies/list.html.eex
+++ b/lib/trustvox_web/templates/companies/list.html.eex
@@ -1,5 +1,6 @@
 <section class="phx-hero">
   <h1><%= gettext "List of companies" %></h1>
+  <p> Dint find? <%= link "Click here", to: Routes.companies_path(@conn, :new) %> to register it!
 </section>
 
 <section class="row">
