--- a/lib/trustvox_web/templates/companies/search_form.html.eex
+++ b/lib/trustvox_web/templates/companies/search_form.html.eex
@@ -8,7 +8,7 @@
     <%= form_for :search, Routes.companies_path(@conn, :search), fn _f -> %>
       <div class="form-group row">
         <div class="column center">
-          <%= text_input :search, :query, class: "form-control", value: "Type the name of a company" %>
+          <%= text_input :search, :query, class: "form-control", placeholder: "Type the name of a company" %>
         </div>
         <div class="">
           <%= submit "Search", class: "btn btn-primary", method: :get %>
