--- a/lib/trustvox_web/templates/complains/new.html.eex
+++ b/lib/trustvox_web/templates/complains/new.html.eex
@@ -1,8 +1,8 @@
 <section class="phx-hero">
   <h1><%= gettext "Post new complain :)" %></h1>
   <div class="form-group company">
-    <p><h2 style="border-top: 1px solid;"> <%= @company.name %></h2></p>
-    <p style="border-bottom: 1px solid;"> <%= link "website", to: @company.website %></p>
+    <p><h3 style="text-align: left; border-top: 1px solid;"> Company: <%= @company.name %></h2></p>
+    <p style="text-align: left; border-bottom: 1px solid;">Link: <%= link @company.website, to: @company.website %></p>
   </div>
 </section>
 
@@ -23,8 +23,11 @@
 
   <div class="form-group">
     <%= label f, :subsidiary_id, "Company Location", class: "control-label" %>
-    <%= select(f, :subsidiary_id, subsidiaries_to_string(@company.subsidiaries)) %>
+    <%= select(f, :subsidiary_id, subsidiaries_to_string(@company.subsidiaries), style: "width: 100%;") %>
     <%= error_tag f, :subsidiary_id %>
+  </div>
+
+  <div class="form-group">
   </div>
 
   <div class="form-group">
